config/unity-benchmark-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: unity-benchmark-deployment
  labels:
    app: unity
    status: active
    environment: production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: unity
        status: active
        environment: production
    spec:
      containers:
        - name: app
          image: unitybenchmark/unity_benchmark_docker:0.1
          ports:
            - containerPort: 443
          # The following environment variables will contain the database host,
          # user and password to connect to the PostgreSQL instance.
          volumeMounts:
          - mountPath: /etc/service-account
            name: google-project-service-account
          - mountPath: /etc/pki/tls/certs
            name: ssl-cert
          - mountPath: /etc/pki/tls/private
            name: ssl-key
          - mountPath: /etc/gcs-admin-service-account
            name: gcs-admin-service-account
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=unity-benchmark:us-central1:unity-benchmark-postgres-01=tcp:5432",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: google-project-service-account
          secret:
            secretName: unity-service-account
        - name: gcs-admin-service-account
          secret:
            secretName: unity-gcs-admin-service-account
        - name: ssl-cert
          secret:
            secretName: ssl-certificate
        - name: ssl-key
          secret:
            secretName: ssl-keyfile
      # [END volumes]
