config/unity-benchmark-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: unity-benchmark-service
spec:
  selector:
    app: unity
    status: active
  ports:
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
